--- a/css/media.css
+++ b/css/media.css
@@ -14,6 +14,8 @@
     align-items: center;
     column-gap: 56px;
     row-gap: 0;
+    padding-left: 48px;
+    padding-right: 48px;
   }
 
   .s1 .content {
